--- a/config.default.ini
+++ b/config.default.ini
@@ -1,5 +1,23 @@
+; Scavenger application configuration file.
+; Copy it from config.default.ini and paste it as config.ini and change the values to your liking.
+
 ; Every location directive is local from the project root. (Where App, Scavenger, etc. reside).
-; Use something like a symlink to point the pearls somewhere else inside of the filesystem or other drives.
+; Use something like a symlink to point the location somewhere else inside of the filesystem or other drives.
 
 [Pearls]
 Location = "Pearls"
+
+; All valid database types by default; mysql, sqlite.
+; Username and Password directives are ignored in the SQLite database type.
+
+[Database]
+Enabled = "false"
+
+Type = "mysql"
+Username = ""
+Password = ""
+
+; SQLite specific directives.
+
+[SQLite]
+Location = "App/Database.sqlite3"
