--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "require": {
     "twig/twig": "^3.14",
     "pecee/simple-router": "^5.4",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
   },
   "autoload": {
     "psr-4": {
